PROJECT ( "Distance_Meter" )
SET ( PROJECT_VERSION_MAJOR 2 )
SET ( PROJECT_VERSION_MINOR 0 )

SET ( CMAKE_BUILD_TYPE Debug )
SET ( CMAKE_VERBOSE_MAKEFILE true )

SET ( OUTPUT_ELF "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.out" )

SET ( SRC_FILES merge_main.cpp MPU9255.h MPU9255.cpp i2c_device.h i2c_device.cpp laser.h laser.cpp )

SET ( CMAKE_C_COMPILER "gcc-7.2.0" )

ADD_COMPILE_OPTIONS ( -std=c++11 )

LINK_LIBRARIES ( wiringPi m pthread )

SET ( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE} )
SET ( CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )
SET ( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BUILD_TYPE}/lib )

ADD_EXECUTABLE ( ${OUTPUT_ELF} ${SRC_FILES} )




